k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: todolist-app
labels:
app: todolist-app
spec:
replicas: 1
selector:
matchLabels:
app: todolist-app
template:
metadata:
labels:
app: todolist-app
spec:
containers:
- name: todolist-app
image: rajeshmuthusamy/techstreets/reactjs:latest
ports:
- containerPort: 3000
value: "3000"
- name: NODE_ENV
value: "production"
apiVersion: v1
kind: Service
metadata:
name: todolist-app
spec:
selector:
app: todolist-app
ports:
name: http
port: 3000
targetPort: 3000
type: LoadBalancer
