k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
name: todolist-service
spec:
selector:
app: todolist
ports:
- name: http
port: 80
targetPort: 3000
type: ClusterIP
