k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-todo-ingress
spec:
  rules:
  - host: react-todo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-todo
            port:
              name: http
              number: 80
